Various refactor and fixes
